--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -6,7 +6,7 @@
   <title>Dashboard</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
-  <link rel="stylesheet" href="style/dashboard.css" />
+  <link rel="stylesheet" href="css/dashboard.css" />
 </head>
 <body>
   <div class="d-flex" id="wrapper">
@@ -18,10 +18,10 @@
           <a href="#" class="nav-link text-white">Dashboard</a>
         </li>
         <li class="nav-item mb-2">
-          <a href="#" class="nav-link text-white">Reports</a>
+          <a href="consumable.html" class="nav-link text-white">Consumable</a>
         </li>
         <li class="nav-item mb-2">
-          <a href="#" class="nav-link text-white">Settings</a>
+          <a href="#" class="nav-link text-white">ICS</a>
         </li>
       </ul>
       <button id="logoutBtn" class="btn btn-light mt-auto">Logout</button>
@@ -30,8 +30,13 @@
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
       <h1 class="mb-4">Welcome to the Dashboard</h1>
-      <div id="data-container">
-        <!-- Firestore data will be inserted here -->
+      <div id="data-container" class="d-flex flex-column justify-content-center align-items-center gap-4 flex-grow-1">
+        <a href="consumable.html" class="custom-box border-consumable d-block text-decoration-none text-dark">
+          <h2 class="box-title">Consumable</h2>
+        </a>
+        <div class="custom-box border-ics">
+          <h2 class="box-title">ICS</h2>
+        </div>
       </div>
     </div>
   </div>
