--- a/public/user-management.html
+++ b/public/user-management.html
@@ -128,6 +128,7 @@
       </form>
     </div>
   </div>
+<div id="paginationControls" class="text-center mt-3"></div>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
