add and edit items in consumable

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -29,7 +29,7 @@
 
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
-      <h1 class="mb-4">Welcome to the Dashboard</h1>
+      <h1 class="mb-4" id="welcomeText">Welcome</h1>
       <div id="data-container" class="d-flex flex-column justify-content-center align-items-center gap-4 flex-grow-1">
         <a href="consumable.html" class="custom-box border-consumable d-block text-decoration-none text-dark">
           <h2 class="box-title">Consumable</h2>
