--- a/public/consumable.html
+++ b/public/consumable.html
@@ -45,43 +45,14 @@
               <th>Specification</th>
               <th>Qty</th>
               <th>Unit</th>
+              <th>Date Added</th>
+              <th>Added by</th>
+              <th>Edit</th>
               <th>Action</th>
             </tr>
           </thead>
-          <tbody>
-            <tr>
-              <td>1</td>
-              <td>Battery Dry-Cell, Size AA 4pc/Pack</td>
-              <td>12</td>
-              <td>Pack</td>
-              <td>
-                <button class="btn btn-outline-success btn-sm me-1 toggle-btn">+</button>
-                <button class="btn btn-outline-danger btn-sm toggle-btn">−</button>
-                <input type="number" class="form-control mt-2 action-input d-none" placeholder="Enter amount">
-              </td>
-            </tr>
-            <tr>
-              <td>2</td>
-              <td>Ethyl Alcohol</td>
-              <td>20</td>
-              <td>Bottle</td>
-              <td>
-                <button class="btn btn-outline-success btn-sm me-1 toggle-btn">+</button>
-                <button class="btn btn-outline-danger btn-sm toggle-btn">−</button>
-                <input type="number" class="form-control mt-2 action-input d-none" placeholder="Enter amount">
-              </td>
-            </tr>
-            <tr>
-              <td>3</td>
-              <td>Copy Paper A4</td>
-              <td>15</td>
-              <td>Bundle</td>
-              <td>
-                <button class="btn btn-outline-success btn-sm me-1 toggle-btn">+</button>
-                <button class="btn btn-outline-danger btn-sm toggle-btn">−</button>
-                <input type="number" class="form-control mt-2 action-input d-none" placeholder="Enter amount">
-              </td>
-            </tr>
+          <tbody id="consumableBody">
+            <!-- Filled dynamically -->
           </tbody>
         </table>
       </div>
@@ -109,10 +80,54 @@
       </div>
     </div>
   </div>
+  <!-- Edit Modal -->
+  <div class="modal fade" id="editModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Edit Item</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <input type="hidden" id="editCID">
+          <div class="mb-3">
+            <label for="editSpec" class="form-label">Specification</label>
+            <input type="text" id="editSpec" class="form-control">
+          </div>
+          <div class="mb-3">
+            <label for="editUnit" class="form-label">Unit</label>
+            <input type="text" id="editUnit" class="form-control">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-primary" id="saveEditBtn">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- View Modal -->
+  <div class="modal fade" id="viewModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">View Item</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body" id="viewModalBody">
+          <p><strong>CID:</strong> <span id="viewCID"></span></p>
+          <p><strong>Specification:</strong> <span id="viewSpec"></span></p>
+          <p><strong>Quantity:</strong> <span id="viewQty"></span></p>
+          <p><strong>Unit:</strong> <span id="viewUnit"></span></p>
+          <p><strong>Date Added:</strong> <span id="viewDate"></span></p>
+          <p><strong>Added By:</strong> <span id="viewBy"></span></p>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Firebase + Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="js/consumable-data.js"></script>
-  <script src="js/consumable-ui.js"></script>
+  <script type="module" src="js/consumable-ui.js"></script>
 </body>
 </html>
