add pagination and search function

--- a/public/consumable.html
+++ b/public/consumable.html
@@ -55,6 +55,7 @@
             <!-- Filled dynamically -->
           </tbody>
         </table>
+        <div class="d-flex justify-content-center my-3" id="paginationContainer"></div>
       </div>
 
       <!-- Add Item Section -->
