--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -49,16 +49,21 @@
     </div>
 
     <!-- Page Content -->
-    <div class="container-fluid p-4" id="page-content">
-      <h1 class="mb-4">Welcome to the Admin Dashboard</h1>
-      <div id="data-container" class="d-flex flex-column justify-content-center align-items-center gap-4 flex-grow-1">
-        <a href="user-management.html" class="custom-box border-consumable d-block text-decoration-none text-dark">
-          <h2 class="box-title">User Management</h2>
+    <div class="container-fluid p-4 d-flex flex-column" id="page-content" style="min-height: 100vh;">
+      <h3 class="mb-4">Welcome Admin</h3>
+
+      <div class="d-flex flex-grow-1 justify-content-center align-items-center">
+        <a href="user-management.html" class="text-decoration-none w-100" style="max-width: 800px;">
+          <div class="card border-primary shadow h-250">
+            <div class="card-body d-flex align-items-center justify-content-center">
+              <h2 class="card-title text-primary fw-bold">User Management</h2>
+            </div>
+          </div>
         </a>
       </div>
     </div>
-  </div>
 
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="js/dashboard.js"></script>
 </body>
