--- a/public/consumable.html
+++ b/public/consumable.html
@@ -28,6 +28,9 @@
         <li class="nav-item mb-2">
           <a href="#" class="nav-link text-white">ICS</a>
         </li>
+        <li class="nav-item mb-2">
+          <a href="ownership-summary.html" class="nav-link text-white">Ownership Summary</a>
+        </li>
       </ul>
       <button id="logoutBtn" class="btn btn-light mt-auto">Logout</button>
     </div>
@@ -48,6 +51,9 @@
           </li>
           <li class="nav-item mb-2">
             <a href="#" class="nav-link text-white">ICS</a>
+          </li>
+          <li class="nav-item mb-2">
+            <a href="ownership-summary.html" class="nav-link text-white">Ownership Summary</a>
           </li>
         </ul>
         <button id="logoutBtnMobile" class="btn btn-light mt-auto">Logout</button>
