--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -28,6 +28,9 @@
         <li class="nav-item mb-2">
           <a href="#" class="nav-link text-white">ICS</a>
         </li>
+        <li class="nav-item mb-2">
+          <a href="ownership-summary.html" class="nav-link text-white">Ownership Summary</a>
+        </li>
       </ul>
       <button id="logoutBtn" class="btn btn-light mt-auto">Logout</button>
     </div>
@@ -49,6 +52,9 @@
           <li class="nav-item mb-2">
             <a href="#" class="nav-link text-white">ICS</a>
           </li>
+          <li class="nav-item mb-2">
+            <a href="ownership-summary.html" class="nav-link text-white">Ownership Summary</a>
+          </li>
         </ul>
         <button id="logoutBtnMobile" class="btn btn-light mt-auto">Logout</button>
       </div>
@@ -56,16 +62,35 @@
 
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
-      <h1 class="mb-4" id="welcomeText">Welcome</h1>
-      <div id="data-container" class="d-flex flex-column justify-content-center align-items-center gap-4 flex-grow-1">
-        <a href="consumable.html" class="custom-box border-consumable d-block text-decoration-none text-dark">
-          <h2 class="box-title">Consumable</h2>
+      <h3 class="mb-4" id="welcomeText">Welcome</h3>
+
+      <div class="d-flex flex-column align-items-center gap-4 py-3">
+        <a href="consumable.html" class="text-decoration-none w-100" style="max-width: 800px;">
+          <div class="card border-success shadow h-250">
+            <div class="card-body d-flex align-items-center justify-content-center">
+              <h2 class="card-title text-success fw-bold">Consumable</h2>
+            </div>
+          </div>
         </a>
-        <div class="custom-box border-ics">
-          <h2 class="box-title">ICS</h2>
-        </div>
+
+        <a href="#" class="text-decoration-none w-100" style="max-width: 800px;">
+          <div class="card border-danger shadow h-250">
+            <div class="card-body d-flex align-items-center justify-content-center">
+              <h2 class="card-title text-danger fw-bold">ICS</h2>
+            </div>
+          </div>
+        </a>
+
+        <a href="ownership-summary.html" class="text-decoration-none w-100" style="max-width: 800px;">
+          <div class="card border-primary shadow h-250">
+            <div class="card-body d-flex align-items-center justify-content-center">
+              <h2 class="card-title text-primary fw-bold">Ownership Summary</h2>
+            </div>
+          </div>
+        </a>
       </div>
     </div>
+
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
