add General Use for assign item

--- a/public/ownership-summary.html
+++ b/public/ownership-summary.html
@@ -30,7 +30,7 @@
       <h4 class="mb-4">WRUS Asset Tracking System</h4>
       <ul class="nav flex-column">
         <li class="nav-item mb-2">
-          <a href="#" class="nav-link text-white">Dashboard</a>
+          <a href="dashboard.html" class="nav-link text-white">Dashboard</a>
         </li>
         <li class="nav-item mb-2">
           <a href="consumable.html" class="nav-link text-white">Consumable</a>
@@ -59,7 +59,7 @@
       <div class="offcanvas-body">
         <ul class="nav flex-column">
           <li class="nav-item mb-2">
-            <a href="#" class="nav-link text-white">Dashboard</a>
+            <a href="dashboard.html" class="nav-link text-white">Dashboard</a>
           </li>
           <li class="nav-item mb-2">
             <a href="consumable.html" class="nav-link text-white">Consumable</a>
