change the name of ownership summary to inventory summary

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -29,7 +29,7 @@
           <a href="#" class="nav-link text-white">ICS</a>
         </li>
         <li class="nav-item mb-2">
-          <a href="ownership-summary.html" class="nav-link text-white">Ownership Summary</a>
+          <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
         </li>
       </ul>
       <button id="logoutBtn" class="btn btn-light mt-auto">Logout</button>
@@ -53,7 +53,7 @@
             <a href="#" class="nav-link text-white">ICS</a>
           </li>
           <li class="nav-item mb-2">
-            <a href="ownership-summary.html" class="nav-link text-white">Ownership Summary</a>
+            <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
           </li>
         </ul>
         <button id="logoutBtnMobile" class="btn btn-light mt-auto">Logout</button>
@@ -84,7 +84,7 @@
         <a href="ownership-summary.html" class="text-decoration-none w-100" style="max-width: 800px;">
           <div class="card border-primary shadow h-200">
             <div class="card-body d-flex align-items-center justify-content-center">
-              <h2 class="card-title text-primary fw-bold">Ownership Summary</h2>
+              <h2 class="card-title text-primary fw-bold">Inventory Summary</h2>
             </div>
           </div>
         </a>
