--- a/public/consumable.html
+++ b/public/consumable.html
@@ -29,7 +29,7 @@
           <a href="#" class="nav-link text-white">ICS</a>
         </li>
         <li class="nav-item mb-2">
-          <a href="ownership-summary.html" class="nav-link text-white">Ownership Summary</a>
+          <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
         </li>
       </ul>
       <button id="logoutBtn" class="btn btn-light mt-auto">Logout</button>
@@ -53,7 +53,7 @@
             <a href="#" class="nav-link text-white">ICS</a>
           </li>
           <li class="nav-item mb-2">
-            <a href="ownership-summary.html" class="nav-link text-white">Ownership Summary</a>
+            <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
           </li>
         </ul>
         <button id="logoutBtnMobile" class="btn btn-light mt-auto">Logout</button>
