--- a/public/ownership-summary.html
+++ b/public/ownership-summary.html
@@ -8,7 +8,7 @@
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
   />
-  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/dashboard.css" />
   <link rel="stylesheet" href="css/ownership-summary.css" />
 </head>
@@ -39,7 +39,7 @@
           <a href="#" class="nav-link text-white">ICS</a>
         </li>
         <li class="nav-item mb-2">
-          <a href="ownership-summary.html" class="nav-link text-white">Ownership Summary</a>
+          <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
         </li>
       </ul>
       <button id="logoutBtn" class="btn btn-light mt-auto">Logout</button>
@@ -68,7 +68,7 @@
             <a href="#" class="nav-link text-white">ICS</a>
           </li>
           <li class="nav-item mb-2">
-            <a href="ownership-summary.html" class="nav-link text-white">Ownership Summary</a>
+            <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
           </li>
         </ul>
         <button id="logoutBtnMobile" class="btn btn-light mt-auto">Logout</button>
@@ -77,7 +77,7 @@
 
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
-      <h3 class="mb-4">Ownership Summary</h3>
+      <h3 class="mb-4">Inventory Summary</h3>
 
       <!-- 🔍 Search bar -->
       <div class="mb-3">
