create ICS html and add ICS modal

--- a/public/consumable.html
+++ b/public/consumable.html
@@ -26,7 +26,7 @@
           <a href="#" class="nav-link text-white">Consumable</a>
         </li>
         <li class="nav-item mb-2">
-          <a href="#" class="nav-link text-white">ICS</a>
+          <a href="ics.html" class="nav-link text-white">ICS</a>
         </li>
         <li class="nav-item mb-2">
           <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
@@ -50,7 +50,7 @@
             <a href="#" class="nav-link text-white">Consumable</a>
           </li>
           <li class="nav-item mb-2">
-            <a href="#" class="nav-link text-white">ICS</a>
+            <a href="ics.html" class="nav-link text-white">ICS</a>
           </li>
           <li class="nav-item mb-2">
             <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
