--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -26,7 +26,7 @@
           <a href="consumable.html" class="nav-link text-white">Consumable</a>
         </li>
         <li class="nav-item mb-2">
-          <a href="#" class="nav-link text-white">ICS</a>
+          <a href="ics.html" class="nav-link text-white">ICS</a>
         </li>
         <li class="nav-item mb-2">
           <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
@@ -50,7 +50,7 @@
             <a href="consumable.html" class="nav-link text-white">Consumable</a>
           </li>
           <li class="nav-item mb-2">
-            <a href="#" class="nav-link text-white">ICS</a>
+            <a href="ics.html" class="nav-link text-white">ICS</a>
           </li>
           <li class="nav-item mb-2">
             <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
@@ -73,7 +73,7 @@
           </div>
         </a>
 
-        <a href="#" class="text-decoration-none w-100" style="max-width: 800px;">
+        <a href="ics.html" class="text-decoration-none w-100" style="max-width: 800px;">
           <div class="card border-danger shadow h-200">
             <div class="card-body d-flex align-items-center justify-content-center">
               <h2 class="card-title text-danger fw-bold">ICS</h2>
