--- a/public/ownership-summary.html
+++ b/public/ownership-summary.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ownership Summary</title>
+  <title>Inventory Summary</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -36,7 +36,7 @@
           <a href="consumable.html" class="nav-link text-white">Consumable</a>
         </li>
         <li class="nav-item mb-2">
-          <a href="#" class="nav-link text-white">ICS</a>
+          <a href="ics.html" class="nav-link text-white">ICS</a>
         </li>
         <li class="nav-item mb-2">
           <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
@@ -65,7 +65,7 @@
             <a href="consumable.html" class="nav-link text-white">Consumable</a>
           </li>
           <li class="nav-item mb-2">
-            <a href="#" class="nav-link text-white">ICS</a>
+            <a href="ics.html" class="nav-link text-white">ICS</a>
           </li>
           <li class="nav-item mb-2">
             <a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a>
