--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -65,6 +65,6 @@
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="js/dashboard.js"></script>
+  <script type="module" src="js/admin/admin-verification.js"></script>
 </body>
 </html>
