--- a/public/user-management.html
+++ b/public/user-management.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>User Management</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="../admin/user-management.css" />
 </head>
@@ -53,112 +53,140 @@
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
 
-    <div class="input-group mb-3 w-50">
-      <span class="input-group-text" id="search-icon"><i class="bi bi-search"></i></span>
-      <input
-        type="text"
-        id="searchInput"
-        class="form-control"
-        placeholder="Search by username or name..."
-        aria-label="Search"
-        aria-describedby="search-icon"
-      />
-    </div>
+      <div class="input-group mb-3 w-50">
+        <span class="input-group-text" id="search-icon"><i class="bi bi-search"></i></span>
+        <input
+          type="text"
+          id="searchInput"
+          class="form-control"
+          placeholder="Search by username or name..."
+          aria-label="Search"
+          aria-describedby="search-icon"
+        />
+      </div>
 
-      <h1 class="mb-4">User Management</h1>
-      <button id="showAddUserFormBtn" class="btn btn-success mb-3">Add User</button>
+        <h1 class="mb-4">User Management</h1>
 
-      <!-- Add User Form -->
-      <form id="addUserForm" class="mb-4 d-none">
-        <div class="row g-3 align-items-end">
-          <div class="col-md-2">
-            <label for="newUsername" class="form-label">Username</label>
-            <input type="text" class="form-control" id="newUsername" required />
-          </div>
-          <div class="col-md-2">
-            <label for="newLastName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="newLastName" required />
-          </div>
-          <div class="col-md-2">
-            <label for="newFirstName" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="newFirstName" required />
-          </div>
-          <div class="col-md-1">
-            <label for="newMiddleInitial" class="form-label">M.I.</label>
-            <input type="text" class="form-control" id="newMiddleInitial" maxlength="1" required />
-          </div>
-          <div class="col-md-2">
-            <label for="newPassword" class="form-label">Password</label>
-            <input type="password" class="form-control" id="newPassword" required />
-          </div>
-          <div class="col-md-2">
-            <label for="confirmPassword" class="form-label">Confirm</label>
-            <input type="password" class="form-control" id="confirmPassword" required />
-          </div>
-          <div class="col-md-1">
-            <button type="submit" class="btn btn-primary w-100">Add</button>
+        <button id="showAddUserFormBtn" class="btn btn-success mb-3">Add User</button>
+
+        <!-- Data Table -->
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>Username</th>
+              <th>Last Name</th>
+              <th>First Name</th>
+              <th>Middle Initial</th>
+              <th>Status</th>
+              <th>Action</th>
+            </tr>
+          </thead>
+          <tbody id="usersTableBody"></tbody>
+        </table>
+        <div id="paginationControls" class="mt-3 text-center"></div>
+
+      <!-- Add User Modal -->
+      <div class="modal fade" id="addUserModal" tabindex="-1" aria-labelledby="addUserModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <form id="addUserForm">
+              <div class="modal-header">
+                <h5 class="modal-title" id="addUserModalLabel">Add User</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="mb-2">
+                  <label for="username" class="form-label">Username</label>
+                  <input type="text" class="form-control" id="username" placeholder="Username" required />
+                </div>
+
+                <div class="mb-2">
+                  <label for="lastName" class="form-label">Last Name</label>
+                  <input type="text" class="form-control" id="lastName" placeholder="Last Name" required />
+                </div>
+
+                <div class="mb-2">
+                  <label for="firstName" class="form-label">First Name</label>
+                  <input type="text" class="form-control" id="firstName" placeholder="First Name" required />
+                </div>
+
+                <div class="mb-2">
+                  <label for="middleInitial" class="form-label">Middle Initial</label>
+                  <input type="text" class="form-control" id="middleInitial" placeholder="Middle Initial" maxlength="1" />
+                </div>
+
+                <div class="mb-3">
+                  <label for="password" class="form-label">Password</label>
+                  <input type="password" class="form-control" id="password" placeholder="Password" required />
+                </div>
+
+                <div class="mb-3">
+                  <label for="confirmPassword" class="form-label">Confirm Password</label>
+                  <input type="password" class="form-control" id="confirmPassword" placeholder="Confirm Password" required />
+                </div>
+
+                <label class="form-label">Status</label>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="status" id="statusActive" value="active" checked />
+                  <label class="form-check-label" for="statusActive">Active</label>
+                </div>
+                <div class="form-check mb-3">
+                  <input class="form-check-input" type="radio" name="status" id="statusInactive" value="inactive" />
+                  <label class="form-check-label" for="statusInactive">Inactive</label>
+                </div>
+              </div>
+
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-primary">Add User</button>
+              </div>
+            </form>
           </div>
         </div>
-        <div id="passwordMismatch" class="text-danger mt-2 d-none">Passwords do not match.</div>
-      </form>
+      </div>
 
+      <!-- Edit modal-->
+      <div class="modal fade" id="editUserModal" tabindex="-1" aria-labelledby="editUserModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <form id="editUserForm">
+              <div class="modal-header">
+                <h5 class="modal-title" id="editUserModalLabel">Edit User</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <input type="hidden" id="editUserId" />
+                <input type="text" class="form-control mb-2" id="editUsername" placeholder="Username" required />
+                <input type="text" class="form-control mb-2" id="editLastName" placeholder="Last Name" required />
+                <input type="text" class="form-control mb-2" id="editFirstName" placeholder="First Name" required />
+                <input type="text" class="form-control mb-2" id="editMiddleInitial" placeholder="Middle Initial" maxlength="1" />
 
-      <!-- Data Table -->
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-            <th>Username</th>
-            <th>Last Name</th>
-            <th>First Name</th>
-            <th>Middle Initial</th>
-            <th>Action</th>
-          </tr>
-        </thead>
-        <tbody id="usersTableBody"></tbody>
-      </table>
+                <label class="form-label">Status:</label>
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="editStatus" id="editStatusActive" value="active" />
+                  <label class="form-check-label" for="editStatusActive">Active</label>
+                </div>
+                <div class="form-check mb-2">
+                  <input class="form-check-input" type="radio" name="editStatus" id="editStatusInactive" value="inactive" />
+                  <label class="form-check-label" for="editStatusInactive">Inactive</label>
+                </div>
+
+                <input type="password" class="form-control mb-2" id="editPassword" placeholder="New Password" />
+                <input type="password" class="form-control mb-3" id="editConfirmPassword" placeholder="Confirm New Password" />
+              </div>
+
+              <div class="modal-footer">
+                <button type="submit" class="btn btn-success">Update User</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
-  <!-- edit modal -->
-  <div class="modal fade" id="editUserModal" tabindex="-1" aria-labelledby="editUserModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <form id="editUserForm" class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="editUserModalLabel">Edit User</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <input type="hidden" id="editUserId" />
-          <div class="mb-3">
-            <label for="editUsername" class="form-label">Username</label>
-            <input type="text" class="form-control" id="editUsername" required />
-          </div>
-          <div class="mb-3">
-            <label for="editLastName" class="form-label">Last Name</label>
-            <input type="text" class="form-control" id="editLastName" required />
-          </div>
-          <div class="mb-3">
-            <label for="editFirstName" class="form-label">First Name</label>
-            <input type="text" class="form-control" id="editFirstName" required />
-          </div>
-          <div class="mb-3">
-            <label for="editMiddleInitial" class="form-label">Middle Initial</label>
-            <input type="text" class="form-control" id="editMiddleInitial" />
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="submit" class="btn btn-success">Save Changes</button>
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-        </div>
-      </form>
-    </div>
-  </div>
-<div id="paginationControls" class="text-center mt-3"></div>
 
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script type="module" src="js/admin/admin-verification.js"></script>
+ <script type="module" src="js/admin/user-management-ui.js"></script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script type="module" src="js/dashboard.js"></script>
-  <script type="module" src="js/admin/user-management-ui.js"></script>
-  <script type="module" src="js/admin/add-user.js"></script>
-  <script type="module" src="js/admin/edit-user.js"></script>
-</body>
 </html>
