--- a/public/consumable.html
+++ b/public/consumable.html
@@ -201,41 +201,33 @@
       </div>
     </div>
   </div>
-  <!-- Ledger Modal -->
-   <div class="modal fade" id="ledgerModal" tabindex="-1" aria-labelledby="ledgerModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable">
-      <div class="modal-content rounded-3">
-        <div class="modal-header">
-          <h5 class="modal-title" id="ledgerModalLabel">Ledger Entries</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-          <div class="px-3 pt-2">
-            <p class="text-muted mb-0">Total Quantity: <strong id="totalQtyDisplay">Loading...</strong></p>
+<!-- Ledger Modal -->
+<div class="modal fade" id="ledgerModal" tabindex="-1" aria-labelledby="ledgerModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-dialog-scrollable">
+    <div class="modal-content rounded-3">
+      <div class="modal-header">
+        <h5 class="modal-title" id="ledgerModalLabel">Ledger Entries</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="px-3 pt-2">
+          <p class="text-muted mb-0">Total Quantity: <strong id="totalQtyDisplay">Loading...</strong></p>
         </div>
-        </div>
-        <div class="modal-body">
-          <table class="table table-bordered table-striped">
-            <thead>
-              <tr>
-                <th>Action</th>
-                <th>Amount</th>
-                <th>Assigned To</th>
-                <th>Modified By</th>
-                <th>Date Modified</th>
-              </tr>
-            </thead>
-            <tbody id="ledgerTableBody">
-              <!-- Rows will be inserted dynamically -->
-            </tbody>
-          </table>
-        </div>
+      </div>
+      <div class="modal-body">
+        <iframe id="pdfPreviewFrame" width="100%" height="600px" frameborder="0"></iframe>
       </div>
     </div>
   </div>
+</div>
+
 
 
 
   <!-- Firebase + Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- jsPDF and AutoTable -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+
   <script type="module" src="js/consumable-data.js"></script>
   <script type="module" src="js/consumable-ui.js"></script>
 </body>
