--- a/public/ownership-summary.html
+++ b/public/ownership-summary.html
@@ -148,6 +148,9 @@
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
   ></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+
 
   <!-- Your Firestore/data logic -->
   <script type="module" src="js/ownership-summary-data.js"></script>
