--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -50,21 +50,35 @@
 
     <!-- Page Content -->
     <div class="container-fluid p-4 d-flex flex-column" id="page-content" style="min-height: 100vh;">
-      <h3 class="mb-4">Welcome Admin</h3>
+      <p class="mb-4 fs-4 fw-semibold text-primary bg-light p-3 rounded shadow-sm" >
+        Welcome Admin
+      </p>
 
-      <div class="d-flex flex-grow-1 justify-content-center align-items-center">
-        <a href="user-management.html" class="text-decoration-none w-100" style="max-width: 800px;">
-          <div class="card border-primary shadow h-250">
-            <div class="card-body d-flex align-items-center justify-content-center">
-              <h2 class="card-title text-primary fw-bold">User Management</h2>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card text-white bg-primary mb-3">
+              <div class="card-header">Weather</div>
+              <div class="card-body">
+                <h5 class="card-title" id="weather">Loading...</h5>
+                <p class="card-text" id="temperature"></p>
+              </div>
             </div>
           </div>
-        </a>
+          <div class="col-md-3">
+            <div class="card text-white bg-success mb-3">
+              <div class="card-header">Date & Time</div>
+              <div class="card-body">
+                <h5 class="card-title" id="date"></h5>
+                <p class="card-text" id="time"></p>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </div>
 
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="js/admin/admin-verification.js"></script>
+  <script type="module" src="js/dashboard.js"></script>
 </body>
 </html>
