--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -62,35 +62,31 @@
 
     <!-- Page Content -->
     <div class="container-fluid p-4" id="page-content">
-      <h3 class="mb-4" id="welcomeText">Welcome</h3>
+      <p class="mb-4 fs-4 fw-semibold text-primary bg-light p-3 rounded shadow-sm" id="welcomeText">
+        Welcome
+      </p>
 
-      <div class="d-flex flex-column align-items-center gap-4 py-3">
-        <a href="consumable.html" class="text-decoration-none w-100" style="max-width: 800px;">
-          <div class="card border-success shadow h-200">
-            <div class="card-body d-flex align-items-center justify-content-center">
-              <h2 class="card-title text-success fw-bold">Consumable</h2>
+        <div class="row">
+          <div class="col-md-3">
+            <div class="card text-white bg-primary mb-3">
+              <div class="card-header">Weather</div>
+              <div class="card-body">
+                <h5 class="card-title" id="weather">Loading...</h5>
+                <p class="card-text" id="temperature"></p>
+              </div>
             </div>
           </div>
-        </a>
-
-        <a href="ics.html" class="text-decoration-none w-100" style="max-width: 800px;">
-          <div class="card border-danger shadow h-200">
-            <div class="card-body d-flex align-items-center justify-content-center">
-              <h2 class="card-title text-danger fw-bold">ICS</h2>
+          <div class="col-md-3">
+            <div class="card text-white bg-success mb-3">
+              <div class="card-header">Date & Time</div>
+              <div class="card-body">
+                <h5 class="card-title" id="date"></h5>
+                <p class="card-text" id="time"></p>
+              </div>
             </div>
           </div>
-        </a>
-
-        <a href="ownership-summary.html" class="text-decoration-none w-100" style="max-width: 800px;">
-          <div class="card border-primary shadow h-200">
-            <div class="card-body d-flex align-items-center justify-content-center">
-              <h2 class="card-title text-primary fw-bold">Inventory Summary</h2>
-            </div>
-          </div>
-        </a>
+        </div>
       </div>
-    </div>
-
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
