add network speed to dashboard

--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -73,6 +73,15 @@
               </div>
             </div>
           </div>
+          <div class="col-md-3">
+            <div class="card text-white bg-danger mb-3">
+              <div class="card-header">Network Speed</div>
+              <div class="card-body">
+                <h5 class="card-title" id="speed-value">Calculating...</h5>
+                <p class="card-text">Download speed is refreshed every 30 seconds.</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
 
