--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -68,7 +68,7 @@
 
         <div class="row">
           <div class="col-md-3">
-            <div class="card text-white bg-primary mb-3">
+            <div class="card text-white bg-info mb-3">
               <div class="card-header">Weather</div>
               <div class="card-body">
                 <h5 class="card-title" id="weather">Loading...</h5>
@@ -85,7 +85,15 @@
               </div>
             </div>
           </div>
-        </div>
+          <div class="col-md-3">
+            <div class="card text-white bg-danger mb-3">
+              <div class="card-header">Network Speed</div>
+              <div class="card-body">
+                <h5 class="card-title" id="speed-value">Calculating...</h5>
+                <p class="card-text">Download speed is refreshed every 30 seconds.</p>
+              </div>
+            </div>
+          </div>
       </div>
   </div>
 
