--- a/public/ics.html
+++ b/public/ics.html
@@ -19,7 +19,7 @@
     <div class="bg-primary text-white p-3 vh-100 d-none d-md-block" id="sidebar">
       <h4 class="mb-4">WRUS Asset Tracking System</h4>
       <ul class="nav flex-column">
-        <li class="nav-item mb-2"><a href="ics.html" class="nav-link text-white">Dashboard</a></li>
+        <li class="nav-item mb-2"><a href="dashboard.html" class="nav-link text-white">Dashboard</a></li>
         <li class="nav-item mb-2"><a href="consumable.html" class="nav-link text-white">Consumable</a></li>
         <li class="nav-item mb-2"><a href="#" class="nav-link text-white">ICS</a></li>
         <li class="nav-item mb-2"><a href="ownership-summary.html" class="nav-link text-white">Inventory Summary</a></li>
