changed unit to UoM and fix downloading of pdf twice in the mobile

--- a/public/consumable.html
+++ b/public/consumable.html
@@ -76,7 +76,7 @@
               <th>CID</th>
               <th>Specification</th>
               <th>Qty</th>
-              <th>Unit</th>
+              <th>UoM</th>
               <th>Edit</th>
               <th>Action</th>
             </tr>
@@ -126,7 +126,7 @@
             <input type="text" id="editSpec" class="form-control">
           </div>
           <div class="mb-3">
-            <label for="editUnit" class="form-label">Unit</label>
+            <label for="editUnit" class="form-label">Unit of Measurement</label>
             <input type="text" id="editUnit" class="form-control">
           </div>
         </div>
@@ -214,7 +214,7 @@
           <h5 class="modal-title" id="ledgerModalLabel">Ledger Entries</h5>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           <div class="px-3 pt-2">
-            <p class="text-muted mb-0">Total Quantity: <strong id="totalQtyDisplay">Loading...</strong></p>
+            <p class="text-muted mb-0">Stocks Left: <strong id="totalQtyDisplay">Loading...</strong></p>
           </div>
         </div>
         <div class="modal-body">
