--- a/public/ics.html
+++ b/public/ics.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
   <link rel="stylesheet" href="css/dashboard.css" />
+  <link rel="stylesheet" href="css/ics.css" />
 </head>
 <body>
   <!-- Toggle Button for Small Screens -->
@@ -56,15 +57,10 @@
         <table class="table table-bordered table-striped">
           <thead class="table-primary">
             <tr>
-              <th>ICS No.</th>
+              <th>ICS/PAR No.</th>
               <th>Assigned To</th>
               <th>Description</th>
-              <th>Qty</th>
-              <th>Unit</th>
-              <th>Unit Cost</th>
-              <th>Total Cost</th>
-              <th>Date Issued</th>
-              <th>Remarks</th>
+              <th>Date</th>
               <th>Status</th>
               <th>Action</th>
             </tr>
@@ -92,8 +88,13 @@
               <div class="modal-body row g-3">
 
                 <div class="col-md-6">
-                  <label for="icsNo" class="form-label">ICS No.</label>
+                  <label for="icsNo" class="form-label">ICS/PAR No.</label>
                   <input type="text" class="form-control" id="icsNo" required />
+                </div>
+
+                <div class="col-md-6">
+                  <label for="serialNumber" class="form-label">Serial Number</label>
+                  <input type="text" class="form-control" id="serialNumber" />
                 </div>
 
                 <div class="col-md-6">
@@ -115,7 +116,7 @@
                 </div>
 
                 <div class="col-md-4">
-                  <label for="unit" class="form-label">Unit</label>
+                  <label for="unit" class="form-label">Unit of Measurement</label>
                   <input type="text" class="form-control" id="unit" required />
                 </div>
 
