upload file to the supabase and image url path to firestore

--- a/public/ics.html
+++ b/public/ics.html
@@ -183,6 +183,7 @@
               <div class="modal-body row g-3">
 
                 <input type="hidden" id="editDocId">
+                <input type="hidden" id="editCurrentAttachmentUrl">
 
                 <div class="col-md-6">
                   <label for="editIcsNo" class="form-label">ICS/PAR No.</label>
@@ -265,10 +266,16 @@
       </div>
     </div>
 
+    <div id="loadingOverlay" style="display: none; position: fixed; z-index: 1055; top: 0; left: 0; width: 100%; height: 100%; background: rgba(255,255,255,0.8); justify-content: center; align-items: center;">
+      <div class="spinner-border text-primary" role="status" style="width: 3rem; height: 3rem;">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script type="module" src="js/ics-data.js"></script>
   <script type="module" src="js/ics-ui.js"></script>
+  <script type="module" src="js/upload/upload.js"></script>
 </body>
 </html>
